# saucer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Deps.cmake  LICENSE  NuGet.cmake  README.md  SECURITY.md  constants.hpp.in
.github/: FUNDING.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: show-and-tell.yml  showcase.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  🐛-bug.md  💡-feature-request.md
.github/actions/screenshot/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  ci.yml  debug.windows.yml  pre-build.yml  test.qt5.debug.yml  test.qt5.release.yml  test.qt5.yml  test.qt6.debug.yml  test.qt6.release.yml  test.qt6.yml  test.webview2.yml  test.yml
bindings/: CMakeLists.txt
bindings/include/saucer/: color.h  common.h  embed.h  icon.h  memory.h  options.h  scheme.h  serializer.h  smartview.h  stash.h  webview.h  window.h
bindings/private/: common.impl.hpp  icon.hpp  options.hpp  scheme.hpp  serializer.impl.hpp  smartview.impl.hpp  stash.hpp  utils.hpp  webview.hpp
bindings/src/: color.cpp  common.cpp  embed.cpp  icon.cpp  memory.cpp  options.cpp  scheme.cpp  serializer.cpp  serializer.impl.cpp  smartview.cpp  smartview.impl.cpp  stash.cpp  utils.hpp  webview.cpp  window.cpp
bindings/utils/: handle.hpp  wrap.hpp
cmake/: cpm.cmake  deps.cmake  embed.cmake  module.cmake  nuget.cmake  polyfill.cmake  webview2.cmake
cmake/toolchain/: zig.cmake  zig.fix.hpp
examples/cli-embedding/: CMakeLists.txt  README.md
examples/cli-embedding/content/: index.html
examples/cli-embedding/src/: main.cpp
examples/desktop/: CMakeLists.txt  main.cpp
examples/embedding/: CMakeLists.txt  README.md  main.cpp
examples/embedding/content/src/: index.html
examples/embedding/embedded/: all.hpp
examples/embedding/embedded/assets/: logo.png.hpp
examples/embedding/embedded/src/: index.html.hpp  index.js.hpp
examples/embedding/embedded/style/: style.css.hpp
examples/embedding/src/: main.cpp
examples/expose/: CMakeLists.txt  main.cpp
examples/json-bridge/: CMakeLists.txt  main.cpp  test.html
examples/json_bridge/: CMakeLists.txt  main.cpp
examples/loop/: CMakeLists.txt  main.cpp
examples/manual-embedding/: CMakeLists.txt  README.md  main.cpp
examples/modules/: CMakeLists.txt  main.cpp
examples/multiple/: CMakeLists.txt  main.cpp
examples/pdf/: CMakeLists.txt  main.cpp
include/: serializer.hpp  smartview.hpp  smartview.inl  webview.hpp  window.hpp
include/bridge/: bridge.hpp  bridged_webview.hpp  bridged_webview.inl
include/events/: events.hpp  events.inl
include/module/: module.hpp
include/modules/: core.module.hpp
include/promise/: promise.hpp  promise.inl
include/saucer/: app.hpp  app.inl  desktop.hpp  error.hpp  executor.hpp  icon.hpp  navigation.hpp  permission.hpp  scheme.hpp  script.hpp  smartview.hpp  smartview.inl  stash.hpp  uri.hpp  url.hpp  webview.hpp  webview.inl  window.hpp  window.inl
include/serializers/: json.hpp  json.inl  serializer.hpp
include/variable/: variable.hpp  variable.inl
lib/: CMakeLists.txt  exports.cpp  exports.hpp  serializer.cpp  serializer.hpp
modules/: module.qt5.hpp  module.qt6.hpp  module.webview2.hpp
polyfill/: expected.hpp  functional.hpp  jthread.hpp
private/: cocoa.app.impl.hpp  cocoa.icon.impl.hpp  cocoa.utils.hpp  cocoa.utils.inl  cocoa.window.impl.hpp  gtk.app.impl.hpp  gtk.icon.impl.hpp  gtk.utils.hpp  gtk.utils.inl  gtk.window.impl.hpp  handle.inl  icon.gtk.impl.hpp  instantiate.hpp  latch.hpp  qt.icon.impl.hpp  qt.navigation.impl.hpp  qt.scheme.impl.hpp  qt.webview.impl.hpp  qt.window.impl.hpp  requests.hpp  scheme.webkit.impl.hpp  scheme.webview2.impl.hpp  scripts.hpp  utils.gtk.hpp  utils.gtk.inl  utils.win32.hpp  warnings.hpp  webkit.webview.impl.hpp  webview.qt.impl.hpp  webview.webkit.impl.hpp  webview.webview2.impl.hpp  win32.app.impl.hpp  win32.utils.hpp  win32.utils.inl  win32.window.impl.hpp  window.gtk.impl.hpp  window.qt.impl.hpp  window.win32.impl.hpp  wk.navigation.impl.hpp  wk.scheme.impl.hpp  (+7 more)
private/saucer/: app.impl.hpp  cocoa.app.impl.hpp  cocoa.icon.impl.hpp  cocoa.utils.hpp  cocoa.utils.inl  cocoa.window.impl.hpp  error.impl.hpp  error.impl.inl  gtk.app.impl.hpp  gtk.error.hpp  gtk.icon.impl.hpp  gtk.utils.hpp  gtk.utils.inl  gtk.window.impl.hpp  handle.hpp  handle.inl  instantiate.hpp  invoke.hpp  invoke.inl  lease.hpp  lease.inl  qt.app.impl.hpp  qt.error.hpp  qt.icon.impl.hpp  qt.navigation.impl.hpp  qt.permission.impl.hpp  qt.scheme.impl.hpp  qt.uri.impl.hpp  qt.url.impl.hpp  qt.utils.hpp  qt.utils.inl  qt.webview.impl.hpp  qt.window.impl.hpp  ref_obj.hpp  ref_obj.inl  ref_ptr.hpp  ref_ptr.inl  request.hpp  request.utils.hpp  request.utils.inl  (+30 more)
shared/: exports.cpp  exports.hpp  serializer.cpp  serializer.hpp
shared/serializers/: ffi.hpp  ffi.inl
src/: acrylic.win32.hpp  app.cpp  bridge.cpp  bridge.json.cpp  cocoa.app.impl.mm  cocoa.app.mm  cocoa.desktop.mm  cocoa.icon.mm  cocoa.utils.mm  cocoa.window.impl.mm  cocoa.window.mm  core.module.cpp  creation.error.cpp  error.bad_function.cpp  error.bad_type.cpp  error.cpp  error.impl.cpp  error.serialize.cpp  glaze.request.cpp  glaze.requests.cpp  glaze.serializer.cpp  gtk.app.cpp  gtk.app.impl.cpp  gtk.desktop.cpp  gtk.error.cpp  gtk.icon.cpp  gtk.window.cpp  gtk.window.impl.cpp  icon.gtk.cpp  icon.qt.cpp  icon.win32.cpp  latch.cpp  module.cpp  qt.app.cpp  qt.app.impl.cpp  qt.desktop.cpp  qt.error.cpp  qt.icon.cpp  qt.icon.impl.cpp  qt.navigation.cpp  (+102 more)
src/module/: qt.module.stable.cpp  unstable.cpp  wk.module.stable.mm  wkg.module.stable.cpp  wv2.module.stable.cpp
template/: config.hpp.in  embed.file.cpp.in  embed.file.hpp.in  embed.hpp.in
tests/: CMakeLists.txt  cfg.hpp  main.cpp  serializer.test.cpp  smartview.test.cpp  smartview.tests.cpp  webview.test.cpp  webview.tests.cpp  window.test.cpp  window.tests.cpp
tests/include/: runner.hpp  test.hpp  utils.hpp
tests/src/: main.cpp  regression.test.cpp  smartview.test.cpp  webview.test.cpp  window.test.cpp
(+95 files in other folders)
